--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "build": "cd client && vite build",
+    "preview": "cd client && vite preview",
     "start": "node server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
